--- a/Example/Arrow_Example/Base.lproj/Main.storyboard
+++ b/Example/Arrow_Example/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HLu-vd-MiX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,79 +9,54 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--VPN-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Arrow_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ExampleViewController" customModule="Arrow_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6JC-7w-SNx">
-                                <rect key="frame" x="0.0" y="440" width="375" height="227"/>
-                                <subviews>
-                                    <view clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="eMJ-Of-fzQ" customClass="ArrowView" customModule="Arrows">
-                                        <rect key="frame" x="144" y="8" width="87" height="40"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="Sd1-K3-oBK"/>
-                                            <constraint firstAttribute="width" constant="87" id="hxT-4R-p0x"/>
-                                        </constraints>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rd5-Gj-qpw">
-                                        <rect key="frame" x="147.5" y="98.5" width="80" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="MG8-eW-b8n"/>
-                                        </constraints>
-                                        <state key="normal" title="Change"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                <real key="value" value="2"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="10"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="changeArrowPosition" destination="BYZ-38-t0r" eventType="touchUpInside" id="AL0-Q9-xGy"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="eMJ-Of-fzQ" firstAttribute="centerX" secondItem="6JC-7w-SNx" secondAttribute="centerX" id="Hxw-88-KWQ"/>
-                                    <constraint firstItem="eMJ-Of-fzQ" firstAttribute="top" secondItem="6JC-7w-SNx" secondAttribute="top" constant="8" id="Vbd-lG-o1e"/>
-                                    <constraint firstAttribute="height" constant="227" id="Vc6-JA-diS"/>
-                                    <constraint firstItem="rd5-Gj-qpw" firstAttribute="centerX" secondItem="6JC-7w-SNx" secondAttribute="centerX" id="kfa-JN-UX6"/>
-                                    <constraint firstItem="rd5-Gj-qpw" firstAttribute="centerY" secondItem="6JC-7w-SNx" secondAttribute="centerY" id="sdm-te-xqm"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="20"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="center" translatesAutoresizingMaskIntoConstraints="NO" id="vBb-TU-IhU">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <constraints>
-                            <constraint firstItem="6JC-7w-SNx" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="1Bw-YO-7BW"/>
-                            <constraint firstItem="6JC-7w-SNx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="V2a-Ne-ZM1"/>
-                            <constraint firstItem="6JC-7w-SNx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bAZ-6B-Igr"/>
+                            <constraint firstItem="vBb-TU-IhU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="aBO-qu-Syy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vBb-TU-IhU" secondAttribute="bottom" id="eNn-ea-ZAD"/>
+                            <constraint firstItem="vBb-TU-IhU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="liJ-t7-H4f"/>
+                            <constraint firstItem="vBb-TU-IhU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pAB-r6-4VZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="arrow" destination="eMJ-Of-fzQ" id="S5t-Bs-qSB"/>
-                        <outlet property="panel" destination="6JC-7w-SNx" id="wbj-Lp-c46"/>
-                    </connections>
+                    <navigationItem key="navigationItem" title="VPN" id="3xR-cm-nXE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="992.79999999999995" y="69.715142428785612"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tlS-pF-Ei7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HLu-vd-MiX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f1z-Ih-9GJ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="QMw-aG-sQb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qTq-VO-35j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="69.715142428785612"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="center" width="375" height="389"/>
+    </resources>
 </document>
